commit №8 Сделал курс валют